Add task labels
